--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta charset="utf-8"/>
 </head>
 <body>
-<h1>Első commit</h1>
+<h1>Polgár Lilla</h1>
+<p>A kiírandó: <span id=kiirando></p>
+<script src="alap.js"></script>
 </body>
 </html>
